force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationDetails__c/SVMXA360__CONF_MobileConfigurationDetails__c.object-meta.xml
<CustomObject>
    <description>This object configuration related to SFS Mobile.</description>
    <label>A360 Mobile Configuration Detail</label>
    <nameField>
        <displayFormat>MCD-{00000}</displayFormat>
        <label>Mobile Configuration Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A360 Mobile Configuration Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>