force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationDetails__c/fields/SVMXA360__ActionTitle__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ActionTitle__c</fullName>
    <description>This stores the Name to be displayed for any action.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>