force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationDetails__c/fields/SVMXA360__Application__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Application__c</fullName>
    <description>The type of Mobile application i.e. Field Service app, Salesforce app plus etc.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>