force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationDetails__c/fields/SVMXA360__ConfigurationType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ConfigurationType__c</fullName>
    <description>This is used internally to store the type based on the feature and mobile application.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Configuration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>