force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationDetails__c/fields/SVMXA360__Feature__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Feature__c</fullName>
    <description>This stores the name of the feature used in Mobile.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Feature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>