force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationDetails__c/fields/SVMXA360__HierarchyOrder__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__HierarchyOrder__c</fullName>
    <description>This has the options for Hierarchy Order.</description>
    <label>Hierarchy Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>asset_only</fullName>
                <label>Asset Only</label>
            </value>
            <value>
                <fullName>location_to_asset</fullName>
                <label>Location &gt; Asset</label>
            </value>
            <value>
                <fullName>account_to_asset</fullName>
                <label>Account &gt; Asset</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>