force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationDetails__c/fields/SVMXA360__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectAPIName__c</fullName>
    <description>The API name of the object configured.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>