force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationDetails__c/fields/SVMXA360__Sequence__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Sequence__c</fullName>
    <description>Stores the display sequence of the action.</description>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>