force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationDetails__c/fields/SVMXA360__SPMActionId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SPMActionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to &lt;SPM Txn object&gt; to store SPM Transaction for the associated Action title</description>
    <label>SPM Action</label>
    <referenceTo>SVMXA360__CONF_Layout__c</referenceTo>
    <relationshipLabel>A360 Mobile Configuration Details</relationshipLabel>
    <relationshipName>A360_MobileConfigurationDetails</relationshipName>
    <type>Lookup</type>
</CustomField>