force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationDetails__c/fields/SVMXA360__SPMDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SPMDeveloperName__c</fullName>
    <description>This is a lookup to SPM transaction to store SPM Transaction for the associated Action title</description>
    <formula>SVMXA360__SPMActionId__r.SVMXA360__DeveloperName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPM Developer Name</label>
    <type>Text</type>
</CustomField>