force-app/main/default/objects/SVMXA360__CONF_MobileConfigurationDetails__c/listViews/SVMXA360__All.listView-meta.xml
<ListView>
    <fullName>SVMXA360__All</fullName>
    <columns>NAME</columns>
    <columns>SVMXA360__Application__c</columns>
    <columns>SVMXA360__Feature__c</columns>
    <columns>SVMXA360__ConfigurationType__c</columns>
    <columns>SVMXA360__ObjectAPIName__c</columns>
    <columns>SVMXA360__FieldAPIName__c</columns>
    <columns>SVMXA360__ActionTitle__c</columns>
    <columns>SVMXA360__HierarchyOrder__c</columns>
    <columns>SVMXA360__Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>